--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -368,87 +368,7 @@
                 <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error updating master_update_history&#39;</span><span class="p">,</span>
                             <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_send_to_master</span><span class="p">((</span><span class="s">&#39;task_stat&#39;</span><span class="p">,</span><span class="n">task_stat_id</span><span class="p">,</span><span class="n">now</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">))</span>
-
-        <span class="c"># check if whole job is finished</span>
-        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select dataset_id, job_id from search where task_id = ?&#39;</span>
-        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">task_id</span><span class="p">,)</span>
-        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-        <span class="n">dataset_id</span> <span class="o">=</span> <span class="k">None</span>
-        <span class="n">job_id</span> <span class="o">=</span> <span class="k">None</span>
-        <span class="k">for</span> <span class="n">d_id</span><span class="p">,</span><span class="n">j_id</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
-            <span class="n">dataset_id</span> <span class="o">=</span> <span class="n">d_id</span>
-            <span class="n">job_id</span> <span class="o">=</span> <span class="n">j_id</span>
-        <span class="k">if</span> <span class="p">(</span><span class="ow">not</span> <span class="n">dataset_id</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="ow">not</span> <span class="n">job_id</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;cannot find dataset or job id&#39;</span><span class="p">)</span>
-        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select jobs_submitted,tasks_submitted from dataset &#39;</span>
-        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where dataset_id = ?&#39;</span>
-        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
-        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-        <span class="n">total_jobs</span> <span class="o">=</span> <span class="k">None</span>
-        <span class="n">total_tasks</span> <span class="o">=</span> <span class="k">None</span>
-        <span class="k">for</span> <span class="n">njobs</span><span class="p">,</span><span class="n">ntasks</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
-            <span class="n">total_jobs</span> <span class="o">=</span> <span class="n">njobs</span>
-            <span class="n">total_tasks</span> <span class="o">=</span> <span class="n">ntasks</span>
-        <span class="k">if</span> <span class="p">(</span><span class="ow">not</span> <span class="n">total_jobs</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="ow">not</span> <span class="n">total_tasks</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;cannot find total_jobs or total_tasks&#39;</span><span class="p">)</span>
-
-        <span class="n">tasks_per_job</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">total_tasks</span><span class="o">/</span><span class="n">total_jobs</span><span class="p">)</span>
-        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select task_id,task_status from search where job_id = ?&#39;</span>
-        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">job_id</span><span class="p">,)</span>
-        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-        <span class="n">task_statuses</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
-        <span class="k">if</span> <span class="n">ret</span> <span class="ow">and</span> <span class="nb">len</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span> <span class="o">==</span> <span class="n">tasks_per_job</span><span class="p">:</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s">&#39;tasks_per_job = %d, len(ret) = %d&#39;</span><span class="p">,</span><span class="n">tasks_per_job</span><span class="p">,</span><span class="nb">len</span><span class="p">(</span><span class="n">ret</span><span class="p">))</span>
-            <span class="c"># require that all tasks for this job are in our db</span>
-            <span class="c"># means that distributed jobs can only complete at the master</span>
-            <span class="k">for</span> <span class="n">t</span><span class="p">,</span><span class="n">s</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
-                <span class="n">task_statuses</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">s</span><span class="p">)</span>
-        <span class="n">job_status</span> <span class="o">=</span> <span class="k">None</span>
-        <span class="k">if</span> <span class="n">task_statuses</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">task_statuses</span><span class="o">&amp;</span><span class="p">{</span><span class="s">&#39;waiting&#39;</span><span class="p">,</span><span class="s">&#39;queued&#39;</span><span class="p">,</span><span class="s">&#39;processing&#39;</span><span class="p">,</span><span class="s">&#39;resume&#39;</span><span class="p">,</span><span class="s">&#39;reset&#39;</span><span class="p">}:</span>
-            <span class="k">if</span> <span class="ow">not</span> <span class="n">task_statuses</span><span class="o">-</span><span class="p">{</span><span class="s">&#39;complete&#39;</span><span class="p">}:</span>
-                <span class="n">job_status</span> <span class="o">=</span> <span class="s">&#39;complete&#39;</span>
-            <span class="k">elif</span> <span class="ow">not</span> <span class="n">task_statuses</span><span class="o">-</span><span class="p">{</span><span class="s">&#39;complete&#39;</span><span class="p">,</span><span class="s">&#39;failed&#39;</span><span class="p">}:</span>
-                <span class="n">job_status</span> <span class="o">=</span> <span class="s">&#39;errors&#39;</span>
-            <span class="k">elif</span> <span class="ow">not</span> <span class="n">task_statuses</span><span class="o">-</span><span class="p">{</span><span class="s">&#39;complete&#39;</span><span class="p">,</span><span class="s">&#39;failed&#39;</span><span class="p">,</span><span class="s">&#39;suspended&#39;</span><span class="p">}:</span>
-                <span class="n">job_status</span> <span class="o">=</span> <span class="s">&#39;suspended&#39;</span>
-        <span class="k">if</span> <span class="n">job_status</span><span class="p">:</span>
-            <span class="c"># update job status</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;job %s marked as %s&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">job_status</span><span class="p">)</span>
-            <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update job set status = ?, status_changed = ? &#39;</span>
-            <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; where job_id = ?&#39;</span>
-            <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">job_status</span><span class="p">,</span><span class="n">now</span><span class="p">,</span><span class="n">job_id</span><span class="p">)</span>
-            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_is_master</span><span class="p">():</span>
-                <span class="n">sql3</span> <span class="o">=</span> <span class="s">&#39;replace into master_update_history (table_name,update_index,timestamp) values (?,?,?)&#39;</span>
-                <span class="n">bindings3</span> <span class="o">=</span> <span class="p">(</span><span class="s">&#39;job&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">now</span><span class="p">)</span>
-                <span class="k">try</span><span class="p">:</span>
-                    <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql3</span><span class="p">,</span> <span class="n">bindings3</span><span class="p">)</span>
-                <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
-                    <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;error updating master_update_history&#39;</span><span class="p">,</span>
-                                <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
-            <span class="k">else</span><span class="p">:</span>
-                <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_send_to_master</span><span class="p">((</span><span class="s">&#39;job&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">,</span><span class="n">now</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">))</span>
-
-            <span class="k">if</span> <span class="n">job_status</span> <span class="o">==</span> <span class="s">&#39;complete&#39;</span><span class="p">:</span>
-                <span class="c"># TODO: collate task stats</span>
-
-                <span class="c"># clean dagtemp</span>
-                <span class="k">if</span> <span class="s">&#39;site_temp&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">]:</span>
-                    <span class="n">temp_dir</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">][</span><span class="s">&#39;site_temp&#39;</span><span class="p">]</span>
-                    <span class="n">dataset</span> <span class="o">=</span> <span class="n">GlobalID</span><span class="o">.</span><span class="n">localID_ret</span><span class="p">(</span><span class="n">dataset_id</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s">&#39;int&#39;</span><span class="p">)</span>
-                    <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select job_index from job where job_id = ?&#39;</span>
-                    <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">job_id</span><span class="p">,)</span>
-                    <span class="k">try</span><span class="p">:</span>
-                        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-                        <span class="n">job</span> <span class="o">=</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
-                        <span class="n">dagtemp</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">temp_dir</span><span class="p">,</span> <span class="nb">str</span><span class="p">(</span><span class="n">dataset</span><span class="p">),</span> <span class="nb">str</span><span class="p">(</span><span class="n">job</span><span class="p">))</span>
-                        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;cleaning site_temp %r&#39;</span><span class="p">,</span> <span class="n">dagtemp</span><span class="p">)</span>
-                        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_executor_wrapper</span><span class="p">(</span><span class="n">partial</span><span class="p">(</span><span class="n">functions</span><span class="o">.</span><span class="n">delete</span><span class="p">,</span> <span class="n">dagtemp</span><span class="p">))</span>
-                    <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
-                        <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;failed to clean site_temp&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span></div>
-
-                <span class="c"># TODO: if not master, delete tasks</span>
+            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_send_to_master</span><span class="p">((</span><span class="s">&#39;task_stat&#39;</span><span class="p">,</span><span class="n">task_stat_id</span><span class="p">,</span><span class="n">now</span><span class="p">,</span><span class="n">sql</span><span class="p">,</span><span class="n">bindings</span><span class="p">))</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
 <div class="viewcode-block" id="rpc.rpc_task_error"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_task_error">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_task_error</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">task_id</span><span class="p">,</span> <span class="n">error_info</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
