--- a/_modules/iceprod/core/exe_json.html
+++ b/_modules/iceprod/core/exe_json.html
@@ -156,10 +156,6 @@
 
 <div class="viewcode-block" id="downloadtask"><a class="viewcode-back" href="../../../core/exe_json.html#iceprod.core.exe_json.downloadtask">[docs]</a><span class="k">def</span> <span class="nf">downloadtask</span><span class="p">(</span><span class="n">gridspec</span><span class="p">,</span> <span class="n">resources</span><span class="o">=</span><span class="p">{}):</span>
     <span class="sd">&quot;&quot;&quot;Download a new task from the server&quot;&quot;&quot;</span>
-    <span class="k">try</span><span class="p">:</span>
-        <span class="n">platform</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">[</span><span class="s">&#39;PLATFORM&#39;</span><span class="p">]</span>
-    <span class="k">except</span><span class="p">:</span>
-        <span class="n">platform</span> <span class="o">=</span> <span class="n">functions</span><span class="o">.</span><span class="n">platform</span><span class="p">()</span>
     <span class="n">hostname</span> <span class="o">=</span> <span class="n">functions</span><span class="o">.</span><span class="n">gethostname</span><span class="p">()</span>
     <span class="n">domain</span> <span class="o">=</span> <span class="s">&#39;.&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">hostname</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s">&#39;.&#39;</span><span class="p">)[</span><span class="o">-</span><span class="mi">2</span><span class="p">:])</span>
     <span class="k">try</span><span class="p">:</span>
@@ -169,10 +165,8 @@
     <span class="n">resources</span> <span class="o">=</span> <span class="n">deepcopy</span><span class="p">(</span><span class="n">resources</span><span class="p">)</span>
     <span class="k">if</span> <span class="s">&#39;gpu&#39;</span> <span class="ow">in</span> <span class="n">resources</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">resources</span><span class="p">[</span><span class="s">&#39;gpu&#39;</span><span class="p">],</span><span class="nb">list</span><span class="p">):</span>
         <span class="n">resources</span><span class="p">[</span><span class="s">&#39;gpu&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">resources</span><span class="p">[</span><span class="s">&#39;gpu&#39;</span><span class="p">])</span>
-    <span class="n">python_unicode</span> <span class="o">=</span> <span class="s">&#39;ucs4&#39;</span> <span class="k">if</span> <span class="n">sys</span><span class="o">.</span><span class="n">maxunicode</span> <span class="o">==</span> <span class="mi">1114111</span> <span class="k">else</span> <span class="s">&#39;ucs2&#39;</span>
-    <span class="n">task</span> <span class="o">=</span> <span class="n">JSONRPC</span><span class="o">.</span><span class="n">new_task</span><span class="p">(</span><span class="n">gridspec</span><span class="o">=</span><span class="n">gridspec</span><span class="p">,</span> <span class="n">platform</span><span class="o">=</span><span class="n">platform</span><span class="p">,</span>
+    <span class="n">task</span> <span class="o">=</span> <span class="n">JSONRPC</span><span class="o">.</span><span class="n">new_task</span><span class="p">(</span><span class="n">gridspec</span><span class="o">=</span><span class="n">gridspec</span><span class="p">,</span>
                             <span class="n">hostname</span><span class="o">=</span><span class="n">hostname</span><span class="p">,</span> <span class="n">domain</span><span class="o">=</span><span class="n">domain</span><span class="p">,</span> <span class="n">ifaces</span><span class="o">=</span><span class="n">ifaces</span><span class="p">,</span>
-                            <span class="n">python_unicode</span><span class="o">=</span><span class="n">python_unicode</span><span class="p">,</span>
                             <span class="o">**</span><span class="n">resources</span><span class="p">)</span>
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
         <span class="c"># an error occurred</span>
