--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -321,9 +321,12 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">statsd</span><span class="o">.</span><span class="n">incr</span><span class="p">(</span><span class="s">&#39;finish_task.domain.&#39;</span><span class="o">+</span><span class="n">stats</span><span class="p">[</span><span class="s">&#39;domain&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s">&#39;.&#39;</span><span class="p">,</span><span class="s">&#39;_&#39;</span><span class="p">),</span>
                                     <span class="n">count</span><span class="o">=</span><span class="nb">int</span><span class="p">(</span><span class="n">time_used</span><span class="p">)</span> <span class="k">if</span> <span class="n">time_used</span> <span class="k">else</span> <span class="mi">1</span><span class="p">)</span>
 
+        <span class="c"># add current time</span>
+        <span class="n">now</span> <span class="o">=</span> <span class="n">nowstr</span><span class="p">()</span>
+        <span class="n">stats</span><span class="p">[</span><span class="s">&#39;time&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">now</span>
+
         <span class="k">with</span> <span class="p">(</span><span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">acquire_lock</span><span class="p">(</span><span class="s">&#39;queue&#39;</span><span class="p">)):</span>
             <span class="c"># update task status</span>
-            <span class="n">now</span> <span class="o">=</span> <span class="n">nowstr</span><span class="p">()</span>
             <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update search set task_status = ? &#39;</span>
             <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; where task_id = ?&#39;</span>
             <span class="n">sql2</span> <span class="o">=</span> <span class="s">&#39;update task set prev_status = status, &#39;</span>
