--- a/_modules/index.html
+++ b/_modules/index.html
@@ -142,7 +142,14 @@
 <li><a href="iceprod/server/dbmethods/web.html">iceprod.server.dbmethods.web</a></li>
 </ul><li><a href="iceprod/server/file_io.html">iceprod.server.file_io</a></li>
 <li><a href="iceprod/server/globus.html">iceprod.server.globus</a></li>
+<li><a href="iceprod/server/grid.html">iceprod.server.grid</a></li>
+<li><a href="iceprod/server/module.html">iceprod.server.module</a></li>
+<li><a href="iceprod/server/modules/db.html">iceprod.server.modules.db</a></li>
+<li><a href="iceprod/server/modules/proxy.html">iceprod.server.modules.proxy</a></li>
+<li><a href="iceprod/server/modules/schedule.html">iceprod.server.modules.schedule</a></li>
+<li><a href="iceprod/server/modules/website.html">iceprod.server.modules.website</a></li>
 <li><a href="iceprod/server/nginx.html">iceprod.server.nginx</a></li>
+<li><a href="iceprod/server/plugins/condor.html">iceprod.server.plugins.condor</a></li>
 <li><a href="iceprod/server/schedule.html">iceprod.server.schedule</a></li>
 <li><a href="iceprod/server/server.html">iceprod.server.server</a></li>
 <li><a href="iceprod/server/squid.html">iceprod.server.squid</a></li>
